add Authentification, Locker PIN check
