# controllers/Smartlocker.js
@@ -4,6 +4,9 @@ var url = require('url');
 
 var Smartlocker = require('./SmartlockerService');
 
+module.exports.verifyPIN = function verifyPIN (req, res, next) {
+  Smartlocker.verifyPIN(req.swagger.params, res, next);
+};
 
 module.exports.getHtml = function getHtml (req, res, next) {
   Smartlocker.getHtml(req.swagger.params, res, next);
